finished initial design and added accordion

--- a/spa/src/assets/styles/components/_all.scss
+++ b/spa/src/assets/styles/components/_all.scss
@@ -6,5 +6,11 @@
    Imports
    ========================================================================== */
 
+@import 'buttons';
 @import 'user';
 @import 'map';
+@import 'status';
+@import 'menu';
+@import 'form';
+@import 'multiselect';
+@import 'accordion';
