--- a/spa/src/assets/styles/tools/_all.scss
+++ b/spa/src/assets/styles/tools/_all.scss
@@ -5,3 +5,5 @@
 /* ==========================================================================
    Imports
    ========================================================================== */
+
+@import 'utilities'
