--- a/spa/src/assets/styles/components/_buttons.scss
+++ b/spa/src/assets/styles/components/_buttons.scss
@@ -15,3 +15,18 @@
     background-color: #f7f7f7;
   }
 }
+
+.c-btn--link {
+  padding: 0;
+  background-color: transparent;
+  color: lighten(#2e2e2e, 40%);
+  text-decoration: underline;
+  border: 0;
+  font-weight: normal;
+  &:hover {
+    text-decoration: none;
+    border: 0;
+    color: #2e2e2e;
+    background-color: transparent;
+  }
+}
