move to simplified gems design

--- a/spa/src/assets/styles/components/_all.scss
+++ b/spa/src/assets/styles/components/_all.scss
@@ -9,7 +9,6 @@
 @import 'buttons';
 @import 'user';
 @import 'map';
-@import 'status';
 @import 'menu';
 @import 'form';
 @import 'multiselect';
@@ -17,3 +16,4 @@
 @import 'spinner';
 @import 'itineraries';
 @import 'info-window';
+@import 'my-gem';
