--- a/spa/src/assets/styles/components/_buttons.scss
+++ b/spa/src/assets/styles/components/_buttons.scss
@@ -36,6 +36,7 @@
   background-color: transparent;
   color: #2e2e2e;
   padding: 0;
+  margin: 0 .2rem;
   &:hover {
     text-decoration: none;
     border: 0;
