add styling to places and shared by users list for each place

--- a/spa/src/assets/styles/components/_buttons.scss
+++ b/spa/src/assets/styles/components/_buttons.scss
@@ -9,6 +9,7 @@
   border: .2rem solid transparent;
   padding: .6rem 1.2rem;
   transition: .3s ease;
+  text-decoration: none;
   &:hover {
     border: .2rem solid #2e2e2e;
     color: #2e2e2e;
