--- a/spa/src/assets/styles/components/_buttons.scss
+++ b/spa/src/assets/styles/components/_buttons.scss
@@ -10,7 +10,11 @@
   padding: .6rem 1.2rem;
   transition: .3s ease;
   text-decoration: none;
-  &:hover {
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.3;
+  }
+  &:not([disabled]):hover {
     border: .2rem solid #2e2e2e;
     color: #2e2e2e;
     background-color: #f7f7f7;
@@ -38,7 +42,7 @@
   color: #2e2e2e;
   padding: 0;
   margin: 0 .2rem;
-  &:hover {
+  &:not([disabled]):hover {
     text-decoration: none;
     border: 0;
     background-color: transparent;
