--- a/spa/src/assets/styles/components/_my-gem.scss
+++ b/spa/src/assets/styles/components/_my-gem.scss
@@ -3,6 +3,14 @@
  */
 
 .c-my-gems {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 10rem;
+}
+
+.c-my-gems__list {
+  flex: 1;
   list-style: none;
   padding: 0;
   margin: 0;
