fixed next page and added hovering to show info window in map

--- a/spa/src/assets/styles/components/_info-window.scss
+++ b/spa/src/assets/styles/components/_info-window.scss
@@ -13,6 +13,8 @@
   height: 6rem;
   width: 6rem;
   margin: 1rem;
+  background-position: center;
+  background-size: cover;
 }
 
 .c-info-window__title {
