started styling select dropdown and labels, added "you are here" pin

--- a/spa/src/assets/styles/components/_all.scss
+++ b/spa/src/assets/styles/components/_all.scss
@@ -6,7 +6,11 @@
    Imports
    ========================================================================== */
 
+// native
 @import 'buttons';
+@import 'select';
+
+// custom
 @import 'user';
 @import 'map';
 @import 'menu';
