--- a/spa/src/assets/styles/components/_info-window.scss
+++ b/spa/src/assets/styles/components/_info-window.scss
@@ -7,14 +7,35 @@
   text-align: center;
 }
 
-.c-info-window__img {
+.c-info-window__img-container {
+  position: relative;
   display: inline-block;
   border-radius: 50%;
   height: 6rem;
   width: 6rem;
   margin: 1rem;
-  background-position: center;
-  background-size: cover;
+  overflow: hidden;
+  &.is-loading {
+    background-color: #cccccc;
+    animation: pulse 1s ease-in infinite;
+  }
+}
+
+@keyframes pulse {
+  0%   { opacity: 1; }
+  50% { opacity: .5; }
+  100% { opacity: 1; }
+}
+
+.c-info-window__img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 .c-info-window__title {
