--- a/spa/src/assets/styles/components/_my-gem.scss
+++ b/spa/src/assets/styles/components/_my-gem.scss
@@ -46,14 +46,37 @@
 .c-my-gem__delete-btns {
   display: block;
 }
-.c-my-gem__img {
-  width: 5rem;
-  height: 5rem;
-  background-size: cover;
-  background-position: center;
+
+.c-my-gem__img-container {
+  position: relative;
   border-radius: 50%;
+  height: 5rem;
+  width: 5rem;
   margin-right: 1rem;
+  overflow: hidden;
+  &.is-loading {
+    background-color: #cccccc;
+    animation: pulse 1s ease-in infinite;
+  }
 }
+
+@keyframes pulse {
+  0%   { opacity: 1; }
+  50% { opacity: .5; }
+  100% { opacity: 1; }
+}
+
+.c-my-gem__img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+}
+
 .c-my-gem__btns {
   display: flex;
   align-items: center;
