added stream of saved places

--- a/spa/src/assets/styles/components/_my-gem.scss
+++ b/spa/src/assets/styles/components/_my-gem.scss
@@ -6,7 +6,10 @@
   display: flex;
   min-height: 10rem;
   flex-flow: column;
-  margin: 1rem 0;
+}
+
+.c-my-gems__title {
+  text-align: center;
 }
 
 .c-my-gems__list {
