started re-architecting db

--- a/spa/src/assets/styles/components/_all.scss
+++ b/spa/src/assets/styles/components/_all.scss
@@ -20,5 +20,5 @@
 @import 'spinner';
 @import 'itineraries';
 @import 'info-window';
-@import 'my-gem';
+@import 'my-find';
 @import 'marker-label';
