--- a/spa/src/assets/styles/components/_my-find.scss
+++ b/spa/src/assets/styles/components/_my-find.scss
@@ -1,24 +1,24 @@
 /*
- * components/_my-gem.scss
+ * components/_my-find.scss
  */
 
-.c-my-gems {
+.c-my-finds {
   display: flex;
   min-height: 10rem;
   flex-flow: column;
 }
 
-.c-my-gems__title {
+.c-my-finds__title {
   text-align: center;
 }
 
-.c-my-gems__list {
+.c-my-finds__list {
   flex: 1;
   list-style: none;
   padding: 0;
   margin: 0;
 }
-.c-my-gem {
+.c-my-find {
   display: flex;
   flex-flow: column;
   min-height: 5rem;
@@ -28,29 +28,29 @@
     background-color: #efefef;
   }
 }
-.c-my-gem__cont {
+.c-my-find__cont {
   display: flex;
   align-items: center;
 }
-.c-my-gem__details {
+.c-my-find__details {
   flex: 1;
 }
-.c-my-gem__name {
+.c-my-find__name {
   font-size: 1.5rem;
 }
-.c-my-gem__loc {
+.c-my-find__loc {
   font-size: 1.2rem;
 }
 
-.c-my-gem__delete {
+.c-my-find__delete {
   display: block;
   text-align: center;
 }
-.c-my-gem__delete-btns {
+.c-my-find__delete-btns {
   display: block;
 }
 
-.c-my-gem__img-container {
+.c-my-find__img-container {
   position: relative;
   border-radius: 50%;
   height: 5rem;
@@ -69,7 +69,7 @@
   100% { opacity: 1; }
 }
 
-.c-my-gem__img {
+.c-my-find__img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -80,14 +80,14 @@
   margin: auto;
 }
 
-.c-my-gem__btns {
+.c-my-find__btns {
   display: flex;
   align-items: center;
   list-style: none;
   padding: 0;
   margin-left: 1rem;
 }
-.c-my-gem__btn {
+.c-my-find__btn {
   &:not(:last-child) {
     margin-right: .5rem;
   }
