added endpoint for getting list of users from place ids

--- a/spa/src/assets/styles/components/_my-find.scss
+++ b/spa/src/assets/styles/components/_my-find.scss
@@ -92,3 +92,11 @@
     margin-right: .5rem;
   }
 }
+
+.c-my-find__user-icon {
+  width: 2rem;
+  height: 2rem;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+}
