fixed updating marker label and added mobile version

--- a/spa/src/assets/styles/objects/_main.scss
+++ b/spa/src/assets/styles/objects/_main.scss
@@ -6,6 +6,8 @@
   display: flex;
   flex-flow: column;
   flex: 1;
-  max-width: 35rem;
   background: #EFEFEF;
+  @media  screen and (min-width: 750px) {
+    max-width: 35rem;
+  }
 }
