--- a/spa/src/assets/styles/components/_my-find.scss
+++ b/spa/src/assets/styles/components/_my-find.scss
@@ -36,10 +36,10 @@
   flex: 1;
 }
 .c-my-find__name {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 .c-my-find__loc {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .c-my-find__delete {
@@ -86,6 +86,9 @@
   list-style: none;
   padding: 0;
   margin-left: 1rem;
+  @media  screen and (min-width: 750px) {
+    display: flex;
+  }
 }
 .c-my-find__btn {
   &:not(:last-child) {
