fixed safari zoom on inputs

--- a/spa/src/assets/styles/tools/_utilities.scss
+++ b/spa/src/assets/styles/tools/_utilities.scss
@@ -10,3 +10,11 @@
   text-align: left;
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  select,
+  textarea,
+  input {
+    font-size: 1.15rem;
+  }
+}
+
