fixed location button

--- a/spa/src/assets/styles/components/_map-btn.scss
+++ b/spa/src/assets/styles/components/_map-btn.scss
@@ -16,3 +16,13 @@
     display: none;
   }
 }
+
+
+.c-map-btn__icon {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
