--- a/spa/src/assets/styles/components/_multiselect.scss
+++ b/spa/src/assets/styles/components/_multiselect.scss
@@ -9,6 +9,7 @@
 }
 
 .multiselect__tags {
+  padding: 8px 40px 8px 8px !important;
   border-radius: 0 !important;
   border: 1px solid #cccccc !important;
 }
@@ -39,7 +40,11 @@
 
 .c-multiselect-custom__tag {
   display: inline-block;
-  margin-right: .5rem;
+  margin: .5rem;
+}
+
+.c-multiselect-custom__tag--lg {
+  margin: .7rem;
 }
 
 .c-multiselect-custom__tag-name {
@@ -58,4 +63,8 @@
     color: #2e2e2e;
     border: .1rem solid #2e2e2e;
   }
+}
+
+.multiselect__strong, .multiselect__input {
+  margin: .5rem;
 }
