--- a/spa/src/assets/styles/components/_select.scss
+++ b/spa/src/assets/styles/components/_select.scss
@@ -11,9 +11,9 @@
   background-image: url('~/static/arrow-down.svg');
   background-size: 1rem;
   background-repeat: no-repeat;
-  background-position: right center;
+  background-position: 95% center;
   border-radius: 0;
-  padding: .5rem;
+  padding: .5rem 5% .5rem .5rem;
 }
 
 .c-hello {
