--- a/spa/src/assets/styles/components/_user.scss
+++ b/spa/src/assets/styles/components/_user.scss
@@ -13,6 +13,14 @@
   }
 }
 
+.c-user__active {
+  background-color: #fff;
+}
+
+.c-user__loading {
+  justify-content: center;
+}
+
 .c-user__details {
   border: 0;
   background: none;
