--- a/spa/src/assets/styles/objects/_sidebar.scss
+++ b/spa/src/assets/styles/objects/_sidebar.scss
@@ -22,6 +22,7 @@
   z-index: 99;
   display: block;
   width: 100%;
+  visibility: visible;
   @media  screen and (min-width: 750px) {
     position: relative;
   }
